# agesmith

./: .gitignore  ARCHITECTURE.md  Cargo.toml  ENHANCEMENT_PLAN.md  FEATURES_IMPLEMENTED.md  FINAL_SUMMARY.md  I18N_COMPLETE.md  I18N_GUIDE.md  MODULARIZATION_SUMMARY.md  Makefile  PHASE1_COMPLETE.md  PHASE2_COMPLETE.md  README.md  RENAME_SUMMARY.md  config.toml.example
docs/: ARCHITECTURE.md  CONTRIBUTING.md  MAKEFILE.md  README.md  ROADMAP.md  SOLUTION_IMPLEMENTED.md  SPECIAL_CHARS_FIX.md  TESTING.md  TEST_SUMMARY.md  WRITING_TESTS.md
scripts/: README.md  build-release.sh  install.sh  release.sh
src/: config.rs  events.rs  generator.rs  help.rs  i18n.rs  main.rs  sops.rs  state.rs  ui.rs  ui.rs.bak2
tests/: README.md  TEST_PLAN.md  agesmith_flow_test.rs  comment_handling_test.rs  config_test.rs  crud_operations_test.rs  diagnose_sops.sh  edge_cases_test.rs  generator_test.rs  i18n_test.rs  integration_quoting_test.rs  json_extraction_test.rs  quoting_test.rs  read_test.rs  sops_integration_test.rs  sops_special_chars_test.rs  special_chars_test.rs  storage_test.rs
tests/helpers/: mod.rs
