[package]
name = "agesmith"
version = "0.1.0"
edition = "2021"
description = "Forging secure secrets with age"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
repository = "https://github.com/yourusername/agesmith"
keywords = ["age", "sops", "encryption", "tui", "secrets"]
categories = ["command-line-utilities", "cryptography"]

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
anyhow = "1.0"
arboard = "3.4"
rand = "0.8"
uuid = "1.0"
regex = "1.10"
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
base64 = "0.21"
dirs = "5.0"
